syntax = "proto3";

package org.server.rsaga.reservation;

import "reservation/domain/ReservationStatus.proto";

message CheckReservationLimitRequest {
  int64 reservableItemId = 1;
  int64 reservableTimeId = 2;
  int64 userId = 3;
  int64 businessId = 4;
  int64 reservationId = 5;
  int64 maxQuantityPerUser = 6;
  int64 requestQuantity = 7;
  ReservationStatus status = 8;
}